[package]
name = "rustAWSSigV4Demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.76"
hex = "0.4.3"
hmac = "0.12.1"
serde = "1.0.193"
serde_json = "1.0.108"
sha2 = "0.10.8"
